--- a/style.css
+++ b/style.css
@@ -6,15 +6,31 @@ text-align: center;
 #game-name{  
     border-bottom: 2px dotted red;
     display: inline-block; 
-    padding-bottom: 4px;  
+    ;  
 }
 /* the images */
+
+.main{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 5px;
+
+}
  #img-card {
-    padding-top: 70px;
-    padding-left: 100px;
-    height: 200px;
-    width: 200px;  
-} 
 
-
+     height: 100px;
+    width: 100px;  
+    padding: 2px;
+     margin: auto; 
+    border: 1px solid black;
+     display: none; 
+}  
+ .background {
+     /* display: none;  */
+    width: 100x;
+    height: 100px;
+    border: 3px dashed rgb(10, 9, 9);
+    background-color: rgb(223, 25, 25);
+    opacity: 0.5;
+  } 
 
