--- a/style.css
+++ b/style.css
@@ -16,17 +16,17 @@ text-align: center;
     gap: 5px;
 
 }
- #img-card {
+ .img-card {
 
      height: 100px;
     width: 100px;  
     padding: 2px;
      margin: auto; 
     border: 1px solid black;
-     display: none; 
+      display: none; 
 }  
  .background {
-     /* display: none;  */
+     /* display: none;   */
     width: 100x;
     height: 100px;
     border: 3px dashed rgb(10, 9, 9);
