--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ text-align: center;
 
 }
  
-
   
  .img-card {
 
@@ -37,6 +36,33 @@ text-align: center;
     opacity: 0.5;
   } 
 
+
+/* 
+  .modal{
+    display: grid;
+    grid-template-columns: repeat(4,1fr) ;
+    /* z-index: 1; */
+   
+  
+
+     .modal {
+    
+     position: fixed; 
+     z-index: 1; 
+     padding-top: 100px; 
+     left: 0;
+     top: 0; 
+    width: 100%;
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color:  rgba(0,0,0,0);
+  }   
+  
+ p { 
+margin-bottom: 1000px;
+color: blue;
+}
   #tryAgain-box{
     padding-top: 50px;
      
