--- a/style.css
+++ b/style.css
@@ -60,50 +60,62 @@
 
  
      .modal {
-    
+    margin-top: 25px;
      position: fixed; 
      z-index: 1; 
      padding-top: 100px; 
      left: 0;
      top: 0; 
     width: 100%;
-    height: 100%; 
+    height: 75%; 
     overflow: auto; 
     background-color: rgb(0,0,0); 
-    background-color:  rgba(0,0,0,0);
+    background-color:  rgba(0,0,0,0.5);
   }   
   
  /* p { 
 margin-bottom: 1000px;
 color: blue;
 } */
-  #tryAgain-box{
+  /* #tryAgain-box{
     display: flex;
     flex-direction: column;
     /* padding-top: 5px; */
+
+    #you-lose{
+      
+      color: red;
+      font-size: medium;
+      display: none;
+      
+      }
+    
+      #you-win{
+         
+      color: rgb(91, 17, 166);;
+      font-size: large;
+      display: none; 
+      }
+
+
+
+    #try-again-button{
+      /* display: flex;
+      flex-direction: column; */
+      font-size: large;
+      margin-top: 5px;
+      width: 100px;
+      border: 2px dashed rgb(91, 17, 166);
+     color: rgb(62, 61, 61);;
      
-  }
+     }  
 
-   #you-lose{
-  display: none;
-  color: red;
-  font-size: medium;
-  /* margin-bottom: 3px; */
-  }
+     
 
-  #you-win{
-    display: none;  
-  color: rgb(91, 17, 166);;
-  font-size: large;
-  /* margin-bottom: 3px; */
-  }
+     
+  
 
- #try-again{
-    margin-top: 5px;
-    width: 100px;
-    border: 2px dashed rgb(122, 11, 234);;
-    color: rgb(62, 61, 61);;
-   font-size: large;
-        }  
+
+ 
 
 
