--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   }
 
   .how-to-play {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     text-align: justify;
   
   }
@@ -22,12 +22,23 @@
     padding-top: 10px;
     padding-left: 10px;
     margin-left: 20px;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
    
 
   } 
 
+  #start{
+    height: 100;
+    width: 600;
+    font-size: large;
+    font-weight: bold;
+    border: 2px dashed rgb(208, 176, 241);;
+justify-items: center;
 
+  }
 
 .main{
     padding-bottom: 5px;
@@ -67,11 +78,27 @@
      left: 0;
      top: 0; 
     width: 100%;
-    height: 75%; 
+    height: 50%; 
     overflow: auto; 
     background-color: rgb(0,0,0); 
     background-color:  rgba(0,0,0,0.5);
   }   
+
+  #try-again{
+   
+    padding-left: 50%;
+   }
+
+  #try-again-button{
+    /* display: none; */
+    font-size: large;
+    margin-top: 20px;
+    width: 100px;
+    border: 2px dashed rgb(91, 17, 166);
+   color: rgb(62, 61, 61);;
+   
+   }  
+
   
   #lose_win_text{
 
@@ -93,19 +120,7 @@
        
       }
 
-
-
-    #try-again-button{
-      /* display: flex;
-      flex-direction: column; */
-      font-size: large;
-      margin-top: 5px;
-      width: 100px;
-      border: 2px dashed rgb(91, 17, 166);
-     color: rgb(62, 61, 61);;
-     
-     }  
-
+    
      
 
      
