--- a/style.css
+++ b/style.css
@@ -7,41 +7,55 @@
     color: black;
     border-bottom: 2px dashed rgb(208, 176, 241);
     display: inline-block;
+   
   }
 
   .how-to-play {
-    margin-bottom: 10px;
-    text-align: justify;
-  
+    margin-bottom: 20px;
+      display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center; 
+    gap:35px
   }
 
   .how-to-play p {
     border: 2px dashed rgb(208, 176, 241);
-    font-size: medium;
-    line-height: 1.5;
-    padding-top: 10px;
-    padding-left: 10px;
-    margin-left: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-   
+    font-size: large;
+    
+    
 
-  } 
+    justify-content: center;
+    line-height: 1.75;
+     text-align: justify;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    
+    /* padding-top: 10px;
+    padding-left: 10px;
+    margin-left: 20px; */
+   
+    }
+    .start-div{
+     
+
+    }  
 
   #start{
-    height: 100;
-    width: 600;
-    font-size: large;
+    width: 10%;
+    padding:15px;
+    font-size: larger;
     font-weight: bold;
     border: 2px dashed rgb(208, 176, 241);;
-justify-items: center;
+     justify-items: center;
 
   }
 
 .main{
-    padding-bottom: 5px;
+    padding-bottom: 30px;
     display: grid;
     grid-template-columns: repeat(4,1fr) ;
     gap: 5px;
@@ -52,8 +66,8 @@ justify-items: center;
  .img-card {
     
     height: 100px;
-    width: 100px;  
-    padding: 2px;
+    width: 150px;  
+    padding: 10px;
      margin: auto; 
     border: 2px solid black;
       /* display: none;  */
@@ -68,32 +82,33 @@ justify-items: center;
     display: none;
   } 
 
-
- 
+  
      .modal {
-    margin-top: 30px;
+    margin-top: 70px;
      position: fixed; 
      z-index: 1; 
      padding-top: 100px; 
      left: 0;
      top: 0; 
     width: 100%;
-    height: 50%; 
-    overflow: auto; 
+    height: 57%; 
+     overflow: auto;  
     background-color: rgb(0,0,0); 
     background-color:  rgba(0,0,0,0.5);
   }   
 
   #try-again{
-   
-    padding-left: 50%;
+   display: none;
+    padding-left: 40%;
    }
 
   #try-again-button{
     /* display: none; */
-    font-size: large;
+    font-size: larger;
+    font-weight: bold;
     margin-top: 20px;
-    width: 100px;
+    width: 150px;
+    height: 50px;
     border: 2px dashed rgb(91, 17, 166);
    color: rgb(62, 61, 61);;
    
@@ -106,15 +121,15 @@ justify-items: center;
   }
 
     #you-lose{
-      /* display: none; */
+      padding-left: 20px;
       color: red;
-      font-size: medium;
+      font-size: large;
       
       
       }
     
       #you-win{
-        /* display: none;   */
+        padding-left: 20px;
       color: rgb(91, 17, 166);;
       font-size: large;
        
