--- a/style.css
+++ b/style.css
@@ -21,21 +21,20 @@
 
   .how-to-play p {
     border: 2px dashed rgb(91, 17, 166);
-    font-size: large;
+    font-size: medium;
     justify-content: center;
-    line-height: 1.75;
+    line-height: 1.5;
     text-align: justify;
     margin: 0 auto;
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 20px;
-    padding-top: 20px;
+      
        
     }
     
 
   #start{
-    width: 10%;
+    width: 100px;
     padding:15px;
     font-size: larger;
     font-weight: bold;
@@ -124,9 +123,24 @@
       }
 
     
-     
+   /* Styles for Mobile devices */
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  .img-card {
+    height: 80px; 
+    width: 100px; 
+    margin: auto;
+    border: 1px solid black; 
+  }
 
-     
+  .background {
+    width: 100%; 
+    height: 80px; 
+    border: 1px dashed black; 
+    background-color: rgb(208, 176, 241);
+    display: none; 
+  }
+}
+
   
 
 
