--- a/style.css
+++ b/style.css
@@ -60,15 +60,15 @@
     
      margin: auto; 
     border: 2px solid black;
-      /* display: none;  */
+      
 }  
  .background {
-    /* display: none;   */
+    
     width: 100x;
     height: 100px;
     border: 2px dashed black;
     background-color: rgb(208, 176, 241);
-    /* opacity: 0.5; */
+    
     display: none;
   } 
 
@@ -126,7 +126,7 @@
    /* Styles for Mobile devices */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .img-card {
-    height: 80px; 
+    height: 100px; 
     width: 100px; 
     margin: auto;
     border: 1px solid black; 
@@ -134,11 +134,21 @@
 
   .background {
     width: 100%; 
-    height: 80px; 
+    height: 100px; 
     border: 1px dashed black; 
     background-color: rgb(208, 176, 241);
     display: none; 
   }
+  #try-again-button{
+    font-size: larger;
+    font-weight: bold;
+    margin-top: 50px;
+    width: 150px;
+    height: 50px;
+    border: 2px dashed rgb(91, 17, 166);
+   color: rgb(62, 61, 61);
+   
+   }  
 }
 
   
