--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@
      justify-items: center;
 
   }
+  body{background-color:beige}
 
 .main{
     padding-bottom: 30px;
@@ -81,7 +82,7 @@
      left: 0;
      top: 0; 
     width: 100%;
-    height: 51%; 
+    height: 30%; 
      overflow: auto;  
     background-color: rgb(0,0,0); 
     background-color:  rgba(0,0,0,0);
